# zk-pipeline-doctor

./: LICENSE  POLAR_PRODUCT_TODO.md  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: test.yml
src/zk_doctor/: __init__.py  cli.py  license.py  pro.py  report.py
src/zk_doctor/detectors/: __init__.py  ci.py  circuit_complexity.py  docs.py  language.py  multi_file_consistency.py  proving_system_pitfalls.py  reproducibility.py  security.py  tests.py  verifier_soundness.py
tests/: test_detectors.py  test_license.py
